| Bug #643 | Repeated syntax errors in SPs crashes the server | ||
|---|---|---|---|
| Submitted: | 12 Jun 2003 4:35 | Modified: | 12 Jun 2003 7:52 |
| Reporter: | Per-Erik Martin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 5.0 | OS: | Any (All) |
| Assigned to: | Per-Erik Martin | CPU Architecture: | Any |
[12 Jun 2003 4:35]
Per-Erik Martin
[12 Jun 2003 7:52]
Per-Erik Martin
Thank you for your bug report. This issue has been fixed in the latest
development tree for that product. You can find more information about
accessing our development trees at
http://www.mysql.com/doc/en/Installing_source_tree.html
The problem was an uninitialized slot (tok_start) in the lex structure
when swapping lex:es. If this actually caused a crash turned out to be
highly intermittent and platform dependent.
