Fixed bug #643, which caused intermittent crashes in net_printf() with repeated syntax errors in stored procedures.

mysql-test/r/sp-error.result:
  New test case for bugfix (#643)
mysql-test/t/sp-error.test:
  New test case for bugfix (#643)
sql/sp_head.cc:
  Forgot to copy a slot from the original lex. (bug #643)